--- a/application/app/views/clinic/emergencycall.rhtml
+++ b/application/app/views/clinic/emergencycall.rhtml
@@ -5,7 +5,7 @@
 
 <form id='confirm' action="/clinic/emergency_call_action" method='post'>
 
-  <%@confirmation_options = ["","YES", "NO"]%>
+  <%@confirmation_options = ["","Yes", "No"]%>
   <%= select_tag "confirmation", options_for_select(@confirmation_options), {:helpText => 'Is this really an emergency call?', :id => "confirmation"}%>
   <%= submit_tag "Finish" %>
 
