--- a/application/app/views/clinic/irrelevantcall.rhtml
+++ b/application/app/views/clinic/irrelevantcall.rhtml
@@ -5,7 +5,7 @@
 
 <form id='confirm' action="/clinic/irrelevant_call_action" method='post'>
 
-  <%@confirmation_options = ["","YES", "NO"]%>
+  <%@confirmation_options = ["","Yes", "No"]%>
   <%= select_tag "confirmation", options_for_select(@confirmation_options), {:helpText => 'Is this really an irrelevant call?', :id => "confirmation"}%>
   
   <%= submit_tag "Finish" %>
