fixed a typo on one of the variables

--- a/application/app/views/encounters/child_symptoms.rhtml
+++ b/application/app/views/encounters/child_symptoms.rhtml
@@ -221,7 +221,7 @@
 
   <%#TODO May be there could be a better way to handle the below select?%>
 
-  <% @child_health_info = @select_options['child_health_infosss'].sort %>
+  <% @child_health_info = @select_options['child_health_info'].sort %>
 
   <script type="text/javascript" language="javascript">
     child_health_values = <%= to_jsarray(@child_health_info) %> ;
