--- a/application/app/views/report/patient_health_issues_report.html.erb
+++ b/application/app/views/report/patient_health_issues_report.html.erb
@@ -72,7 +72,7 @@
           </tr>
           <tr>
             <td width="25%" colspan = 3 class="cellleft cellbottom cellright main-table-cell" style="background-color:ddd; text-align:center;font-weight: bold; font-size: large; font-style: italic;">
-              below are the reported symptoms
+              Below are the <%=  @health_task.gsub(/_/, " ").capitalize %>
             </td>
           </tr>
           
