fixing some changes that were requested during the testing session with SC

--- a/application/app/views/encounters/child_symptoms.rhtml
+++ b/application/app/views/encounters/child_symptoms.rhtml
@@ -97,6 +97,10 @@
       }
     }
 
+    if (display = "<div><br />"){
+      display += "<span class='title' style='font-size:22px;'>No danger signs </span><br />";
+    }
+
     display += "</div>";
    
     //Display
