--- a/application/app/views/encounters/outcome.rhtml
+++ b/application/app/views/encounters/outcome.rhtml
@@ -11,6 +11,7 @@
 
   <% options = {
      :id          => "select_outcome",
+     :multiple => true,
      :tt_onUnLoad => "$('outcome_value_coded_or_text').value = $('select_outcome').value",
      :helpText    => "Recommended Referral"
      } %>
