--- a/application/app/views/clinic/home.html.erb
+++ b/application/app/views/clinic/home.html.erb
@@ -16,11 +16,16 @@
   </select>
 
   <select id="links">
-    <option value="" ttSize="190px">Irrelevant Call</option>
+    <% if session[:house_keeping_mode] == false  %>
+      <option value="" ttSize="190px">Irrelevant Call</option>
+    <%else%>
+      <option value="/clinic/end_housekeeping_mode" ttSize="190px">Cancel</option>
+    <%end%>
     <option value="" ttSize="190px">Find by Name</option>
     <option value="/people/find_by_national_id" ttSize="190px">Find by ID</option>
-    <option value="/clinic/emergencycall" ttSize="200px">Emergency Call</option>
+    <% if session[:task] == false %>
+      <option value="/clinic/emergencycall" ttSize="200px">Emergency Call</option>
+    <%end%>
     <option value="/people/find_by_phone" ttSize="200px">Find by phone</option>
   </select>
 </div>
-
