--- a/application/app/views/clinic/homemain.html.erb
+++ b/application/app/views/clinic/homemain.html.erb
@@ -23,5 +23,6 @@
   <select id="links">
     <option value="">Logout</option>
     <option value="/clinic/call?task=new" ttSize="190px">Start Call</option>
+    <option value="/clinic/housekeeping?task=housekeeping" ttSize="190px">House Keeping</option>
   </select>
 </div>
