--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -44,20 +44,25 @@
   </select>
 
   <select id="links">
-    <%if @patient.female_adult?%>
-      <option value='/encounters/new/pregnancy_status?patient_id=<%=@patient.id%>'>Pregnancy Status</option>
-      <option value='/encounters/new/female_symptoms?patient_id=<%=@patient.id%>'>Symptoms</option>
-    <%else%>
-      <% if @patient.person.age <= 5 %>
-        <option value='/encounters/new/child_symptoms?patient_id=<%=@patient.id%>'>Symptoms</option>
-      <% end %>
-    <%end%>
-    <option value='/encounters/new/outcome?patient_id=<%=@patient.id%>'>Outcome</option>
-    <option value='/clinic/schedules?patient_id=<%=@patient.id%>&source_url=patient_dashboard'>Clinic Schedules</option>
-    <option value='/encounters/new/tips_and_reminders?patient_id=<%=@patient.id%>'>Tips and Reminders</option>
-    <option value='/encounters/recent_tip_and_reminder_program?patient_id=<%=@patient.id%>'>Edit Reminders</option>
-    <option value='/patients/demographics?patient_id=<%=@patient.id%>'>Edit Demograghics</option>
-    <option value='/clinic/call?task=next'>Next Client</option>
+   <% if session[:house_keeping_mode] == false  %>
+      <%if @patient.female_adult?%>
+        <option value='/encounters/new/pregnancy_status?patient_id=<%=@patient.id%>'>Pregnancy Status</option>
+        <option value='/encounters/new/female_symptoms?patient_id=<%=@patient.id%>'>Symptoms</option>
+      <%else%>
+        <% if @patient.person.age <= 5 %>
+          <option value='/encounters/new/child_symptoms?patient_id=<%=@patient.id%>'>Symptoms</option>
+        <% end %>
+      <%end%>
+      <option value='/encounters/new/outcome?patient_id=<%=@patient.id%>'>Outcome</option>
+      <option value='/clinic/schedules?patient_id=<%=@patient.id%>&source_url=patient_dashboard'>Clinic Schedules</option>
+      <option value='/encounters/new/tips_and_reminders?patient_id=<%=@patient.id%>'>Tips and Reminders</option>
+      <option value='/encounters/recent_tip_and_reminder_program?patient_id=<%=@patient.id%>'>Edit Reminders</option>
+      <option value='/patients/demographics?patient_id=<%=@patient.id%>'>Edit Demograghics</option>
+      <option value='/clinic/call?task=next'>Next Client</option>
+    <% else %>
+      <option value='/encounters/recent_tip_and_reminder_program?patient_id=<%=@patient.id%>'>Edit Reminders</option>
+      <option value='/patients/demographics?patient_id=<%=@patient.id%>'>Edit Demograghics</option>
+    <%  end %>
   </select>
 </div>
 
