--- a/application/app/views/layouts/relationships.html.erb
+++ b/application/app/views/layouts/relationships.html.erb
@@ -15,7 +15,7 @@
     <script src="/javascripts/jquery-1.3.2.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       jQuery(document).ready(function($) {
-        $('#cancel').click(function() { window.location = '/patients/relationships/<%= @patient.patient_id -%>' })
+        $('#cancel').click(function() { window.location = '/encounters/new/tips_and_reminders?patient_id=<%= @patient.patient_id -%>' })
         $('#find').click(function() { window.location = '/people/search?relation=<%= @patient.patient_id -%>' })
         if ($('#staging')) $('#staging').click(function() { window.location = 'http://staging/clinic' })
       })
@@ -46,14 +46,15 @@
         <div id="version" style="padding-top:44px;"><%= version %></div>
         <div id="user" style="margin-top:-4px;">Logged in as <%= User.current_user.username %></div>
         <div style="margin-top:40px;font-weight:bold">In order to create a relationship you need to find or register a person.<br/>
-          If the related person already has a health passport, scan the barcode now, <br/>
-          otherwise click find by name.</div>
-        <form id='barcodeForm' action="/people/search">
-          <div style="float:left">Scan a barcode:</div>
-          <%= hidden_field_tag :relation, @patient.patient_id %>
-          <%= text_field_tag :identifier, '', {:id => 'barcode', :class => 'touchscreenTextInput', :style => 'position:absolute' } %>
-          <%= submit_tag "Submit", :style => "display:none" %>
-        </form>
+          <!--If the related person already has a health passport, scan the barcode now, <br/>
+                          otherwise click find by name. -->
+        </div>
+        <!-- <form id='barcodeForm' action="/people/search">
+                  <div style="float:left">Scan a barcode:</div>
+                  <%#= hidden_field_tag :relation, @patient.patient_id %>
+                  <%#= text_field_tag :identifier, '', {:id => 'barcode', :class => 'touchscreenTextInput', :style => 'position:absolute' } %>
+                  <%#= submit_tag "Submit", :style => "display:none" %>
+                </form> -->
       </div>
       <div/>
       <div id="footer" class="dark">
@@ -61,7 +62,7 @@
           <button id="cancel" class="red left"><span>Cancel</span></button>
           <button id="find" class="green"><span>Find Name</span></button>
           <% if User.current_user.admin? %>
-            <button id="staging" class="yellow"><span>Staging</span></button>
+            <!--<button id="staging" class="yellow"><span>Staging</span></button> -->
           <% end %>
         </div>
       </div>
