disabled adding a new person is we are in housekeeping mode, and also if we used search by phone. I also redirected to tips and reminders if this is called from relationships

--- a/application/app/views/people/search.rhtml
+++ b/application/app/views/people/search.rhtml
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   <% if params[:relation] %>
-  var tt_cancel_destination = "/patients/relationships?patient_id=<%=h params[:relation] -%>"
+  var tt_cancel_destination = "/encounters/new/tips_and_reminders?patient_id=<%=h params[:relation] -%>"
   <% else %>
   var tt_cancel_destination = "/clinic/call"
   <% end %>
@@ -54,7 +54,9 @@
       <% end -%>
       <% if session[:house_keeping_mode] == false %>
         <% if params[:identifier] %>
-          <option value="0" onmousedown="changeNextButtonText('New Patient')">Create a new person with the identifier <%=h params[:identifier] -%></option>
+          <% if params[:identifier].length >= 13 %>
+            <option value="0" onmousedown="changeNextButtonText('New Patient')">Create a new person with the identifier <%=h params[:identifier] -%></option>
+          <% end %>
         <% else %>
           <option value="0" onmousedown="changeNextButtonText('New Patient')">Create a new person with the name <%=h params[:given_name] -%> <%=h params[:family_name] -%></option>
         <% end %>
