--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  tt_cancel_destination = "/clinic?status=endcall";
+  tt_cancel_destination = "/clinic/droppedcall?patient_id=<%=@patient.id%>";
   tt_cancel_show = "/clinic?status=endcall";
 </script>
 
