fixed an error with re-routing back to tipa and reminders when adding a guardian

--- a/application/app/views/people/search.rhtml
+++ b/application/app/views/people/search.rhtml
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  <% if params[:relation] %>
+  <% if params[:relation] != '' %>
   var tt_cancel_destination = "/encounters/new/tips_and_reminders?patient_id=<%=h params[:relation] -%>"
   <% else %>
   var tt_cancel_destination = "/clinic/call"
