--- a/application/app/views/report/patient_health_issues_report.html.erb
+++ b/application/app/views/report/patient_health_issues_report.html.erb
@@ -53,7 +53,7 @@
                 Total Callers
             </td>
             <td  class="cellleft cellbottom main-table-cell">
-              0
+              <%= data[:total_calls] %>
             </td>
             <td  class="cellleft cellbottom main-table-cell"> 
               n/a
@@ -64,7 +64,7 @@
                 Total Callers with symptoms
             </td>
             <td  class="cellleft cellbottom main-table-cell">
-              0
+              <%= data[:total_number_of_calls] %>
             </td>
             <td  class="cellleft cellbottom main-table-cell">
               na
